# FinanceCoding

./: .gitignore  README.md  pyproject.toml
GNN/: .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  README_FILE_ORGANIZATION.md  project-proposal.docx  pyproject.toml  pytest.ini  run_experiments.py  test.ipynb  test.md
GNN/config/: config.yaml  data.yaml  graph.yaml  hydra.yaml  train.yaml
GNN/configs/evaluation/: benchmarks.yaml  dashboard_config.yaml  visualization_config.yaml
GNN/configs/experiments/: full_evaluation.yaml
GNN/configs/models/: gat_default.yaml  hrp_default.yaml  lstm_default.yaml
GNN/data/processed/: universe_membership_clean.csv  universe_membership_wiki_sp400.csv  universe_membership_wiki_sp400_seeded.csv
GNN/docs/: DOCSTRING_STANDARDS.md
GNN/docs/deployment/: operational_procedures.md  risk_management_compliance.md
GNN/docs/stories/: 1.1.project-structure-setup-environment-configuration.md  1.4.basic-portfolio-construction-framework.md  2.1.hierarchical-risk-parity-implementation.md  3.4.comparative-analysis-visualization.md  4.2.production-deployment-documentation.md  5.1.data-pipeline-execution-and-validation.md  5.3.comprehensive-backtesting-execution.md  5.4.performance-analytics-statistical-validation.md
GNN/legacy_scripts/: baselines.py  build_membership_from_wikipedia.py  make_labels.py  roll_eval.py  setup_project.py  train_gat.py
GNN/legacy_scripts/pipeline_variations/: run_data_pipeline_execution.py  run_universe_builder.py
GNN/logs/training/: FULL_TRAINING_EXECUTION_REPORT.md
GNN/logs/training/convergence/: gat_diagnostic_report.yaml  (+2 more)
GNN/notebooks/: data_exploration.ipynb
GNN/reports/: comprehensive_report.html
GNN/results/: quick_turnover_fix_results.json  rebalancing_frequency_optimization.json  rebalancing_frequency_summary.csv  task_0_risk_mitigation_results.json  task_0_validation_summary.csv  task_1_pipeline_performance_results.json  task_1_pipeline_performance_summary.csv  task_2_gpu_memory_validation_results.json  task_2_memory_usage_snapshots.csv  task_3_constraint_compliance_results.json  task_3_constraint_violations.csv  turnover_optimization_summary.csv
GNN/results/comparative_analysis/: comparative_analysis_summary.json  executive_presentation.md  optimal_approach_recommendation.json  pairwise_comparisons.csv  recommendation_confidence_framework.md  strategy_rankings.csv
GNN/results/deployment_readiness/: deployment_readiness_assessment.json  deployment_timeline.csv  infrastructure_requirements.csv
GNN/results/executive_summary/: executive_dashboard_data.json  executive_summary.json  investment_recommendations.csv  performance_rankings.csv
GNN/results/investment_decision/: investment_decision_report.json  test_investment_decision_report.json
GNN/results/performance_analytics/: execution_metadata.json  performance_analytics_results.json  performance_metrics.json  publication_tables.json  risk_mitigation.json  rolling_analysis.json  sensitivity_analysis.json  statistical_tests.json  validation_results.json
GNN/results/project_goals_validation/: goal_validation_results.csv  project_goals_validation.json  statistical_evidence.json
GNN/results/qa/: comprehensive_qa_report.json  test_comprehensive_qa_report.json
GNN/results/robustness_testing/: robustness_testing_summary.json  transaction_cost_sensitivity.csv
GNN/scripts/: augment_with_yfinance.py  baselines.py  build_membership_from_wikipedia.py  check_coverage.py  compare_gat_to_baselines.py  create_sample_data.py  download_data.py  download_stooq.py  ingest_stooq_to_hydra.py  make_dataset.py  make_graphs.py  make_labels.py  model_checkpoint_generator.py  reproduce_research.py  roll_eval.py  run_comprehensive_backtest.py  run_enhanced_constraint_validation.py  run_experiment.py  run_performance_analytics.py  run_rebalancing_frequency_solution.py  run_task_0_risk_mitigation.py  run_task_2_gpu_memory_validation.py  sweep_confirm_outperformance.py  test_gat_basic.py  test_gat_integration.py  test_gat_simple.py  train_gat.py  train_gat_aggressive.py  train_hrp_aggressive.py  train_hrp_execution.py  train_lstm_aggressive.py  training_convergence_validator.py
GNN/scripts/pipeline_execution/: run_complete_new_pipeline.py
GNN/src/: __init__.py  cov.py  data.py  env.py  eval_paths.py  features.py  graph.py  loss.py  metrics.py  model_gat.py  rolling_eval.py  train.py  utils.py
GNN/src/config/: base.py  data.py  models.py
GNN/src/experiments/: experiment_runner.py
GNN/src/monitoring/: resource_monitor.py
GNN/src/utils/: adaptive_padding.py  enhanced_metadata.py  gpu.py  io.py  membership_aware_cleaning.py  memory_manager.py  model_checkpoint.py  universe_filter.py  universe_validator.py
GNN/test_reports/: comprehensive_report.html  feasibility_summary.txt
GNN/test_reports/performance/: attribution_analysis.csv  attribution_analysis.html  confidence_intervals.csv  confidence_intervals.html  performance_summary.csv  performance_summary.html  risk_adjusted_analysis.csv  risk_adjusted_analysis.html  statistical_significance.csv  statistical_significance.html
GNN/tests/: conftest.py
GNN/tests/integration/: test_complete_data_pipeline.py  test_comprehensive_backtest_integration.py  test_hrp_integration.py  test_lstm_backtest_integration.py  test_model_performance_comparison.py  test_portfolio_construction.py  test_results_integration_qa.py  test_rolling_backtest_integration.py  test_unified_constraints.py  test_universe_construction_pipeline.py  test_visualization_integration.py
GNN/tests/unit/: test_constraint_engine.py  test_constraints.py  test_data_processors.py.broken  test_gpu_advanced.py  test_gpu_memory_manager.py  test_gpu_utils.py  test_multi_source_pipeline.py  test_performance_analytics.py  test_rolling_backtest_engine.py  test_rolling_window_generator.py  test_stooq_collector.py  test_survivorship_validator.py  test_temporal_bias_detection.py  test_temporal_integrity.py  test_transaction_costs.py  test_universe_builder.py  test_violation_handler.py  test_wikipedia_scraping.py
(+436 files in other folders)
