[project]
name = "financecoding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
data = [
    "feedparser>=6.0.11",
    "requests>=2.32.4",
]
dev = [
    "ipykernel>=6.29.5",
    "python-dotenv>=1.1.1",
]
